--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -4,17 +4,17 @@
         <div *ngFor="let row of [0,1,2,3]" class="row mb-3">
             <div *ngFor="let cell of [0,1,2,3]" class="col">
                 <button (click)="selectCell(row , cell)"
-                        [class.last-letter]="lastSelectedIndex > 0 && gameService.gameState.lettersBag[row][cell].selectedIndex === lastSelectedIndex"
-                        [class.selected]="gameService.gameState.lettersBag[row][cell].selected"
-                        [class.border-danger]="wordInvalid && gameService.gameState.lettersBag[row][cell].selected"
-                        [class.border-warning]="goalAlreadyAccomplished && gameService.gameState.lettersBag[row][cell].selected"
-                        [class.bg-danger]="wordInvalid && gameService.gameState.lettersBag[row][cell].selected"
-                        [class.bg-warning]="goalAlreadyAccomplished && gameService.gameState.lettersBag[row][cell].selected"
-                        [class.animate__flip]="flipCards.includes(gameService.gameState.lettersBag[row][cell].boardIndex)"
+                        [class.last-letter]="gameService.selectedByLastIndex[0] && gameService.selectedByLastIndex[0].selectedIndex > 0 && gameService.gameData.lettersBag[row][cell].selectedIndex === gameService.selectedByLastIndex[0].selectedIndex"
+                        [class.selected]="gameService.gameData.lettersBag[row][cell].selected"
+                        [class.border-danger]="wordInvalid && gameService.gameData.lettersBag[row][cell].selected"
+                        [class.border-warning]="goalAlreadyAccomplished && gameService.gameData.lettersBag[row][cell].selected"
+                        [class.bg-danger]="wordInvalid && gameService.gameData.lettersBag[row][cell].selected"
+                        [class.bg-warning]="goalAlreadyAccomplished && gameService.gameData.lettersBag[row][cell].selected"
+                        [class.animate__flip]="flipCards.includes(gameService.gameData.lettersBag[row][cell].boardIndex)"
                         class="btn cell w-100 card shadow-sm position-relative animate__animated">
-                    <div class="card-body w-100">
+                    <div class="card-body w-100 text-uppercase fw-bold">
                         <!--                    <span class="board-cell-value text-muted position-absolute">{{gameService.letterValues[gameService.gameState.lettersBag[row][cell].value]}}</span>-->
-                        {{ gameService.gameState.lettersBag[row][cell].value }}
+                        {{ gameService.gameData.lettersBag[row][cell].value }}
                     </div>
                 </button>
             </div>
@@ -30,21 +30,21 @@
                  class="card border-1 border mt-3 alert alert-danger p-0 mb-0"
             >
                 <div class="card-body">
-                    <div *ngIf="currentWord" class="d-flex justify-content-between align-items-center">
+                    <div *ngIf="gameService.currentWord" class="d-flex justify-content-between align-items-center">
                         <button (click)="restCurrentWord()" class="btn btn-outline-secondary rounded-1 ps-3 pe-3">
                             <i class="bi bi-trash3"></i>
                         </button>
                         <div class="flex-grow-1 justify-content-center d-flex align-items-center">
-                            <div class="me-2">{{currentWord}}</div>
-                            <span *ngIf="currentWord.length > 2" class="text-muted"
-                                  style="font-size: 12px;">({{calculateScore(currentWord)}} točk)</span>
-                            <span *ngIf="currentWord.length < 3" class="text-muted"
+                            <div class="me-2 text-uppercase">{{gameService.currentWord}}</div>
+                            <span *ngIf="gameService.currentWord.length > 2" class="text-muted"
+                                  style="font-size: 12px;">({{calculateScore(gameService.currentWord)}} točk)</span>
+                            <span *ngIf="gameService.currentWord.length < 3" class="text-muted"
                                   style="font-size: 12px;">(Vsaj 3 črke)</span>
 
                         </div>
                         <button (click)="submit()"
                                 *ngIf="!wordInvalid && !goalAlreadyAccomplished"
-                                [disabled]="currentWord.length < 3 || inProgress"
+                                [disabled]="gameService.currentWord.length < 3 || inProgress"
                                 class="btn btn-outline-primary rounded-1 ps-3 pe-3">
                             <i class="bi bi-send"></i>
                             <div *ngIf="inProgress" class="spinner-border spinner-border-sm" role="status"></div>
@@ -65,7 +65,7 @@
                         </button>
 
                     </div>
-                    <div *ngIf="!currentWord" class="text-muted text-center">Poišči besedo, čas se izteka!</div>
+                    <div *ngIf="!gameService.currentWord" class="text-muted text-center">Poišči besedo, čas se izteka!</div>
                 </div>
             </div>
             <div *ngIf="wordInvalid" class="text-center text-danger"
