--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,7 +6,9 @@
 </div>
 <div class="modal-body">
     <div class="d-flex justify-content-between">
-        <button (click)="actionNewGame()" class="btn btn-outline-primary">
+        <button (click)="actionNewGame()"
+                type="button"
+                class="btn btn-outline-primary">
             <i class="bi bi-dice-5-fill"></i> Začni novo igro
         </button>
     </div>
