Trigger change when animation is finished to reduce stuttering effect.

--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -36,6 +36,9 @@
     font-size: 0.825rem;
   }
 
+  &:disabled{
+    border-color: var(--bs-card-border-color) !important;
+  }
 }
 
 .right-command {
